--- a/Pawar/appointment-booking.html
+++ b/Pawar/appointment-booking.html
@@ -49,6 +49,7 @@
     }
 
     .form-group input,
+    .form-group select,
     .form-group textarea {
       width: 100%;
       padding: 12px 14px;
@@ -62,7 +63,8 @@
     }
 
     .form-group input:focus,
-    .form-group textarea:focus {
+    .form-group textarea:focus,
+    .form-group select:focus {
       border-color: #ffd700;
       box-shadow: 0 0 5px #ffd70080;
     }
@@ -72,15 +74,11 @@
       height: 100px;
     }
 
-    /* Custom icons */
-    .form-group input[type="date"]::-webkit-calendar-picker-indicator,
-    .form-group input[type="time"]::-webkit-calendar-picker-indicator {
-      filter: invert(1) sepia(1) saturate(5) hue-rotate(10deg);
-      cursor: pointer;
-    }
-
-    ::placeholder {
-      color: #aaa;
+    .note {
+      font-size: 14px;
+      color: #ffb347;
+      margin-top: 5px;
+      display: none;
     }
 
     .submit-btn {
@@ -139,7 +137,10 @@
 
       <div class="form-group">
         <label for="time">Select Time</label>
-        <input type="time" id="time" name="time" required />
+        <select id="time" name="time" required>
+          <option value="">Please select a date first</option>
+        </select>
+        <p class="note" id="note"></p>
       </div>
 
       <div class="form-group">
@@ -152,20 +153,97 @@
   </div>
 
   <script>
-    // Restrict past dates
-    const today = new Date().toISOString().split("T")[0];
-    document.getElementById("date").setAttribute("min", today);
-
-    // Auto-open date & time picker
     const dateInput = document.getElementById("date");
-    const timeInput = document.getElementById("time");
+    const timeSelect = document.getElementById("time");
+    const note = document.getElementById("note");
 
+    // ❌ User cannot book today (only after 24 hours)
+    const today = new Date();
+    today.setDate(today.getDate() + 1); // Add 1 day
+    const minDate = today.toISOString().split("T")[0];
+    dateInput.setAttribute("min", minDate);
+
+    // Auto open picker on click
     dateInput.addEventListener("click", () => dateInput.showPicker && dateInput.showPicker());
-    timeInput.addEventListener("click", () => timeInput.showPicker && timeInput.showPicker());
 
-    // Also open when focused via keyboard/tab
-    dateInput.addEventListener("focus", () => dateInput.showPicker && dateInput.showPicker());
-    timeInput.addEventListener("focus", () => timeInput.showPicker && timeInput.showPicker());
+    dateInput.addEventListener("change", () => {
+      const date = new Date(dateInput.value);
+      const day = date.getDay(); // 0 = Sunday, 6 = Saturday
+      const dateNum = date.getDate();
+
+      timeSelect.innerHTML = "";
+      note.style.display = "none";
+
+      // Sunday
+      if (day === 0) {
+        const opt = document.createElement("option");
+        opt.value = "";
+        opt.textContent = "Sunday — On call only (please contact us)";
+        timeSelect.appendChild(opt);
+        note.style.display = "block";
+        note.textContent = "Sunday appointments are on-call only.";
+        return;
+      }
+
+      // Saturday
+      if (day === 6) {
+        const weekOfMonth = Math.ceil(dateNum / 7);
+        if (weekOfMonth === 2 || weekOfMonth === 4) {
+          generateTimeOptions("09:00", "20:00");
+          note.style.display = "block";
+          note.textContent = "2nd or 4th Saturday: 9:00 AM – 8:00 PM";
+        } else {
+          const opt = document.createElement("option");
+          opt.value = "";
+          opt.textContent = "Closed on this Saturday";
+          timeSelect.appendChild(opt);
+          note.style.display = "block";
+          note.textContent = "Only 2nd & 4th Saturdays are available.";
+        }
+        return;
+      }
+
+      // Monday–Friday
+      if (day >= 1 && day <= 5) {
+        generateTimeOptions("09:00", "11:00");
+        generateTimeOptions("17:00", "20:00", true);
+        note.style.display = "block";
+        note.textContent = "Weekdays: 9–11 AM & 5–8 PM";
+      }
+    });
+
+    function generateTimeOptions(start, end, append = false) {
+      const startTime = toMinutes(start);
+      const endTime = toMinutes(end);
+      const step = 30; // 30-minute intervals
+      if (!append) timeSelect.innerHTML = "";
+
+      for (let mins = startTime; mins <= endTime; mins += step) {
+        const time = toHHMM(mins);
+        const option = document.createElement("option");
+        option.value = time;
+        option.textContent = formatAMPM(time);
+        timeSelect.appendChild(option);
+      }
+    }
+
+    function toMinutes(time) {
+      const [h, m] = time.split(":").map(Number);
+      return h * 60 + m;
+    }
+
+    function toHHMM(mins) {
+      const h = String(Math.floor(mins / 60)).padStart(2, "0");
+      const m = String(mins % 60).padStart(2, "0");
+      return `${h}:${m}`;
+    }
+
+    function formatAMPM(time) {
+      let [h, m] = time.split(":").map(Number);
+      const ampm = h >= 12 ? "PM" : "AM";
+      h = h % 12 || 12;
+      return `${h}:${m.toString().padStart(2, "0")} ${ampm}`;
+    }
   </script>
 
 </body>
