--- a/Pawar/appointment-booking.html
+++ b/Pawar/appointment-booking.html
@@ -39,7 +39,6 @@
 
     .form-group {
       margin-bottom: 20px;
-      position: relative;
     }
 
     .form-group label {
@@ -49,8 +48,8 @@
     }
 
     .form-group input,
-    .form-group select,
-    .form-group textarea {
+    .form-group textarea,
+    .form-group select {
       width: 100%;
       padding: 12px 14px;
       border: 1px solid #444;
@@ -74,15 +73,13 @@
       height: 100px;
     }
 
-    .note {
-      font-size: 14px;
-      color: #ffb347;
-      margin-top: 5px;
-      display: none;
+    .btn-group {
+      display: flex;
+      gap: 10px;
     }
 
     .submit-btn {
-      width: 100%;
+      flex: 1;
       padding: 12px;
       background: linear-gradient(45deg, #ffd700, #ffa500);
       border: none;
@@ -92,11 +89,19 @@
       font-weight: 600;
       cursor: pointer;
       transition: 0.3s ease;
+      text-align: center;
     }
 
     .submit-btn:hover {
       transform: translateY(-2px);
       box-shadow: 0 4px 10px rgba(255, 215, 0, 0.3);
+    }
+
+    .info {
+      margin-top: 10px;
+      font-size: 14px;
+      color: #ffd700;
+      text-align: center;
     }
 
     @media (max-width: 480px) {
@@ -106,6 +111,10 @@
 
       .form-container h2 {
         font-size: 20px;
+      }
+
+      .btn-group {
+        flex-direction: column;
       }
     }
   </style>
@@ -131,119 +140,97 @@
       </div>
 
       <div class="form-group">
-        <label for="date">Select Date</label>
+        <label for="date">Date</label>
         <input type="date" id="date" name="date" required />
       </div>
 
       <div class="form-group">
         <label for="time">Select Time</label>
-        <select id="time" name="time" required>
-          <option value="">Please select a date first</option>
+        <select id="time" name="time" required disabled>
+          <option value="">Select a time</option>
         </select>
-        <p class="note" id="note"></p>
       </div>
+
+      <div class="info" id="info"></div>
 
       <div class="form-group">
         <label for="message">Message</label>
         <textarea id="message" name="message" placeholder="Enter your message..."></textarea>
       </div>
 
-      <button type="submit" class="submit-btn">Submit Booking</button>
+      <div class="btn-group">
+        <button type="submit" class="submit-btn">Submit Booking</button>
+        <button type="button" class="submit-btn" onclick="window.location.href='https://www.advparmeshwardpawar.com/'">Back</button>
+      </div>
     </form>
   </div>
 
   <script>
     const dateInput = document.getElementById("date");
     const timeSelect = document.getElementById("time");
-    const note = document.getElementById("note");
+    const info = document.getElementById("info");
 
-    // ❌ User cannot book today (only after 24 hours)
-    const today = new Date();
-    today.setDate(today.getDate() + 1); // Add 1 day
-    const minDate = today.toISOString().split("T")[0];
-    dateInput.setAttribute("min", minDate);
-
-    // Auto open picker on click
+    // Force open date picker on focus or click
+    dateInput.addEventListener("focus", () => dateInput.showPicker && dateInput.showPicker());
     dateInput.addEventListener("click", () => dateInput.showPicker && dateInput.showPicker());
 
-    dateInput.addEventListener("change", () => {
-      const date = new Date(dateInput.value);
-      const day = date.getDay(); // 0 = Sunday, 6 = Saturday
-      const dateNum = date.getDate();
+    // Set date picker to allow only dates after 24 hours
+    const today = new Date();
+    const tomorrow = new Date(today);
+    tomorrow.setDate(today.getDate() + 1);
+    dateInput.min = tomorrow.toISOString().split("T")[0];
 
-      timeSelect.innerHTML = "";
-      note.style.display = "none";
-
-      // Sunday
-      if (day === 0) {
-        const opt = document.createElement("option");
-        opt.value = "";
-        opt.textContent = "Sunday — On call only (please contact us)";
-        timeSelect.appendChild(opt);
-        note.style.display = "block";
-        note.textContent = "Sunday appointments are on-call only.";
-        return;
-      }
-
-      // Saturday
-      if (day === 6) {
-        const weekOfMonth = Math.ceil(dateNum / 7);
-        if (weekOfMonth === 2 || weekOfMonth === 4) {
-          generateTimeOptions("09:00", "20:00");
-          note.style.display = "block";
-          note.textContent = "2nd or 4th Saturday: 9:00 AM – 8:00 PM";
-        } else {
-          const opt = document.createElement("option");
-          opt.value = "";
-          opt.textContent = "Closed on this Saturday";
-          timeSelect.appendChild(opt);
-          note.style.display = "block";
-          note.textContent = "Only 2nd & 4th Saturdays are available.";
-        }
-        return;
-      }
-
-      // Monday–Friday
-      if (day >= 1 && day <= 5) {
-        generateTimeOptions("09:00", "11:00");
-        generateTimeOptions("17:00", "20:00", true);
-        note.style.display = "block";
-        note.textContent = "Weekdays: 9–11 AM & 5–8 PM";
-      }
-    });
-
-    function generateTimeOptions(start, end, append = false) {
-      const startTime = toMinutes(start);
-      const endTime = toMinutes(end);
-      const step = 30; // 30-minute intervals
-      if (!append) timeSelect.innerHTML = "";
-
-      for (let mins = startTime; mins <= endTime; mins += step) {
-        const time = toHHMM(mins);
+    function populateTimes(times) {
+      timeSelect.innerHTML = '<option value="">Select a time</option>';
+      times.forEach(time => {
         const option = document.createElement("option");
         option.value = time;
-        option.textContent = formatAMPM(time);
+        option.textContent = time;
         timeSelect.appendChild(option);
+      });
+      timeSelect.disabled = times.length === 0;
+    }
+
+    dateInput.addEventListener("change", () => {
+      const selectedDate = new Date(dateInput.value);
+      const day = selectedDate.getDay(); // 0=Sunday, 6=Saturday
+      const date = selectedDate.getDate();
+      const month = selectedDate.getMonth();
+      let message = "";
+      let times = [];
+
+      // Get 2nd and 4th Saturday
+      const saturdayDates = [];
+      for (let i = 1; i <= 31; i++) {
+        const temp = new Date(selectedDate.getFullYear(), month, i);
+        if (temp.getDay() === 6) saturdayDates.push(i);
       }
-    }
 
-    function toMinutes(time) {
-      const [h, m] = time.split(":").map(Number);
-      return h * 60 + m;
-    }
+      if (day === 0) {
+        message = "Sunday: On-call appointments only.";
+        times = [];
+      } else if (day >= 1 && day <= 5) {
+        message = "Available: 9:00–11:00 AM and 5:00–8:00 PM";
+        times = [
+          "09:00 AM", "09:30 AM", "10:00 AM", "10:30 AM", "11:00 AM",
+          "05:00 PM", "05:30 PM", "06:00 PM", "06:30 PM", "07:00 PM", "07:30 PM", "08:00 PM"
+        ];
+      } else if (day === 6 && (date === saturdayDates[1] || date === saturdayDates[3])) {
+        message = "2nd & 4th Saturday: Available 9:00 AM – 8:00 PM";
+        times = [
+          "09:00 AM", "09:30 AM", "10:00 AM", "10:30 AM", "11:00 AM", "11:30 AM",
+          "12:00 PM", "12:30 PM", "01:00 PM", "01:30 PM", "02:00 PM", "02:30 PM",
+          "03:00 PM", "03:30 PM", "04:00 PM", "04:30 PM", "05:00 PM", "05:30 PM",
+          "06:00 PM", "06:30 PM", "07:00 PM", "07:30 PM", "08:00 PM"
+        ];
+      } else {
+        message = "Closed on this day.";
+        times = [];
+      }
 
-    function toHHMM(mins) {
-      const h = String(Math.floor(mins / 60)).padStart(2, "0");
-      const m = String(mins % 60).padStart(2, "0");
-      return `${h}:${m}`;
-    }
-
-    function formatAMPM(time) {
-      let [h, m] = time.split(":").map(Number);
-      const ampm = h >= 12 ? "PM" : "AM";
-      h = h % 12 || 12;
-      return `${h}:${m.toString().padStart(2, "0")} ${ampm}`;
-    }
+      info.textContent = message;
+      populateTimes(times);
+    });
   </script>
 
 </body>
