--- a/Pawar/blogs/alimony-and-maintenance-after-divorce-in-pune.html
+++ b/Pawar/blogs/alimony-and-maintenance-after-divorce-in-pune.html
@@ -65,7 +65,7 @@
 
     <div class="container">
       <img
-        src="/Blog Image/best divorce lawyer in pune-min.jpg"
+        src="/Blog Image/Understanding Alimony and Maintenance After Divorce in Pune.jpg"
         alt="Feature Image"
         class="feature-image"
       />
