--- a/Pawar/blogs/alimony-and-maintenance-after-divorce-in-pune.html
+++ b/Pawar/blogs/alimony-and-maintenance-after-divorce-in-pune.html
@@ -21,7 +21,7 @@
       property="og:image"
       content="https://images.unsplash.com/photo-1522202176988-66273c2fd55f"
     />
-    <meta property="og:url" content="https://www.advparmeshwardpawar.com/Best-Divorce-Lawyer-in-Pune.html" />
+    <meta property="og:url" content="https://www.advparmeshwardpawar.com/blogs/alimony-and-maintenance-after-divorce-in-pune.html" />
     <meta property="og:type" content="article" />
     <meta name="twitter:card" content="summary_large_image" />
     <link
@@ -65,7 +65,7 @@
 
     <div class="container">
       <img
-        src="/Blog Image/Pawar/Blog Image/Understanding Alimony and Maintenance After Divorce in Pune.jpg"
+        src="/Blog Image/Pawar/Blog Image/Understanding Alimony and Maintenance After Divorce in Pune.jpg
         alt="Feature Image"
         class="feature-image"
       />
