--- a/Pawar/blogs/alimony-and-maintenance-after-divorce-in-pune.html
+++ b/Pawar/blogs/alimony-and-maintenance-after-divorce-in-pune.html
@@ -33,7 +33,7 @@
   <body>
 <nav class="navbar">
   <div class="logo">
-    <a href="https://yourwebsite.com" style="text-decoration: none; color: inherit;">
+    <a href="/" style="text-decoration: none; color: inherit;">
       Adv. Parmeshwar D. Pawar
     </a>
   </div>
