--- a/Pawar/blogs/alimony-and-maintenance-after-divorce-in-pune.html
+++ b/Pawar/blogs/alimony-and-maintenance-after-divorce-in-pune.html
@@ -65,7 +65,7 @@
 
     <div class="container">
       <img
-        src="/Blog Image/Pawar/Blog Image/u-a.jpg"
+        src="/Blog Image/u-a.jpg"
         alt="Feature Image"
         class="feature-image"
       />
