--- a/Pawar/blogs/alimony-and-maintenance-after-divorce-in-pune.html
+++ b/Pawar/blogs/alimony-and-maintenance-after-divorce-in-pune.html
@@ -4,26 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Understanding Alimony and Maintenance After Divorce in Pune</title>
-    <meta name="description" content="Looking for the best divorce lawyer in Pune? Get expert legal guidance for mutual consent and contested divorces. Confidential consultation, fair representation, and complete support every step of the way." />
+    <meta name="description" content="Learn how Pune Family Courts decide alimony and maintenance after divorce. Know your rights, calculation methods, and legal process for fair financial support.
 
-    <meta name="keywords" content="Best divorce lawyer in Pune, divorce advocate Pune, mutual consent divorce Pune, contested divorce lawyer Pune, family court lawyer Pune, legal separation Pune, top divorce lawyer Pune, best advocate for divorce in Pune" />
+" />
 
-    <meta name="author" content="Adv. Parmeshwar D. Pawar" />
-    <meta
-      property="og:title"
-      content="Understanding Alimony and Maintenance After Divorce in Pune"
-    />
-    <meta
-      property="og:description"
-      content="Looking for the best divorce lawyer in Pune? Get expert legal guidance for mutual consent and contested divorces. Confidential consultation, fair representation, and complete support every step of the way."
-    />
-    <meta
-      property="og:image"
-      content="https://images.unsplash.com/photo-1522202176988-66273c2fd55f"
-    />
-    <meta property="og:url" content="https://www.advparmeshwardpawar.com/blogs/alimony-and-maintenance-after-divorce-in-pune.html" />
-    <meta property="og:type" content="article" />
-    <meta name="twitter:card" content="summary_large_image" />
+
+   
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
