--- a/Pawar/blogs/divorceandchildcustody.html
+++ b/Pawar/blogs/divorceandchildcustody.html
@@ -13,15 +13,15 @@
     <meta property="og:title" content="Divorce & Child Custody: How to Protect Your Rights in Pune" />
     <meta property="og:description" content="Protect your rights in divorce and child custody cases in Pune. Get expert legal guidance on child custody, alimony, property division, and family law matters. Consult trusted divorce lawyers in Pune today." />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="https://yourwebsite.com/mutual-consent-divorce-lawyer-pune" />
-    <meta property="og:image" content="https://yourwebsite.com/images/mutual-divorce-lawyer-pune.jpg" />
+    <meta property="og:url" content="https://www.advparmeshwardpawar.com/blogs/divorceandchildcustody.html" />
+    <meta property="og:image" content="https://www.advparmeshwardpawar.com/blogs/divorceandchildcustody.html" />
   
     <!-- Twitter Card (X) -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Divorce & Child Custody: How to Protect Your Rights in Pune" />
     <meta name="twitter:description" content="Protect your rights in divorce and child custody cases in Pune. Get expert legal guidance on child custody, alimony, property division, and family law matters. Consult trusted divorce lawyers in Pune today.
     " />
-    <meta name="twitter:image" content="https://yourwebsite.com/images/mutual-divorce-lawyer-pune.jpg" />
+    <meta name="twitter:image" content="https://www.advparmeshwardpawar.com/blogs/divorceandchildcustody.html" />
     <!-- open graph end -->
     <link
       rel="stylesheet"
