--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -112,7 +112,7 @@
                 Over 15+ years experience in matrimonial cases including contested divorce, mutual divorce, domestic violence, child custody and maintenance.
             </p>
             <div class="cta-buttons">
-                <a href="https://wa.me/+919421861640" class="btn btn-primary">Online Consultation</a>
+                <a href="https://www.advparmeshwardpawar.com/appointment-booking.html" class="btn btn-primary">Online Consultation</a>
                 <a href="#about" class="btn btn-secondary">Learn More</a>
             </div>
         </div>
@@ -149,7 +149,7 @@
                 </div>
                 <div class="cta-buttons-main">
                     <a href="tel:++919421861640" class="btn btn-cta-primary">Call Now:+91 9421861640</a>
-                    <a href="https://wa.me/+919421861640" class="btn btn-cta-secondary">Schedule Consultation</a>
+                    <a href="https://www.advparmeshwardpawar.com/appointment-booking.html" class="btn btn-cta-secondary">Schedule Consultation</a>
                 </div>
             </div>
             <div class="cta-image">
