--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -307,7 +307,7 @@
                     </div>
 
                     <div class="about-cta">
-                        <a href="https://wa.me/+919421861640" class="btn-about-primary">Schedule Consultation</a>
+                        <a href="https://www.advparmeshwardpawar.com/appointment-booking.html" class="btn-about-primary">Schedule Consultation</a>
                         <a href="tel:+919421861640" class="btn-about-secondary">Call Now</a>
                     </div>
                 </div>
