--- a/Pawar/blogs/how-property-is-divided-during-divorce.html
+++ b/Pawar/blogs/how-property-is-divided-during-divorce.html
@@ -19,9 +19,9 @@
     />
     <meta
       property="og:image"
-      content="https://images.unsplash.com/photo-1522202176988-66273c2fd55f"
+      content="https://www.advparmeshwardpawar.com/Blog%20Image/how-property-is-divided-during-divorce.jpg"
     />
-    <meta property="og:url" content="https://www.advparmeshwardpawar.com/Best-Divorce-Lawyer-in-Pune.html" />
+    <meta property="og:url" content="https://www.advparmeshwardpawar.com/blogs/how-property-is-divided-during-divorce.html" />
     <meta property="og:type" content="article" />
     <meta name="twitter:card" content="summary_large_image" />
     <link
