--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -106,7 +106,7 @@
         </div>
         
         <div class="hero-content">
-            <h1 class="hero-title">Experienced Divorce Lawyer</h1>
+            <h1 class="hero-title">Best Divorce Lawyer</h1>
             <p class="hero-subtitle">Protecting Your Rights Since 2011</p>
             <p class="hero-description">
                 Over 15+ years experience in matrimonial cases including contested divorce, mutual divorce, domestic violence, child custody and maintenance.
