--- a/Pawar/blogs/contested-vs-uncontested-divorce.html
+++ b/Pawar/blogs/contested-vs-uncontested-divorce.html
@@ -3,19 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Best Divorce Lawyer in Pune</title>
-    <meta name="description" content="Looking for the best divorce lawyer in Pune? Get expert legal guidance for mutual consent and contested divorces. Confidential consultation, fair representation, and complete support every step of the way." />
+    <title>Contested vs. Uncontested Divorce: Which One Is Right for You?</title>
+    <meta name="description" content="Learn the key differences between contested and uncontested divorce, including process, cost, and duration. Discover which divorce type suits your situation best with guidance from experienced divorce lawyers." />
 
-    <meta name="keywords" content="Best divorce lawyer in Pune, divorce advocate Pune, mutual consent divorce Pune, contested divorce lawyer Pune, family court lawyer Pune, legal separation Pune, top divorce lawyer Pune, best advocate for divorce in Pune" />
+    <meta name="keywords" content="contested divorce, uncontested divorce, types of divorce, divorce lawyer, family law attorney, divorce process, divorce settlement, contested vs uncontested divorce, legal separation, property division, child custody, alimony, family law
+" />
 
     <meta name="author" content="Adv. Parmeshwar D. Pawar" />
     <meta
       property="og:title"
-      content="Best Divorce Lawyer in Pune"
+      content=Contested vs. Uncontested Divorce: Which One Is Right for You?"
     />
     <meta
       property="og:description"
-      content="Looking for the best divorce lawyer in Pune? Get expert legal guidance for mutual consent and contested divorces. Confidential consultation, fair representation, and complete support every step of the way."
+      content="Learn the key differences between contested and uncontested divorce, including process, cost, and duration. Discover which divorce type suits your situation best with guidance from experienced divorce lawyers."
     />
     <meta
       property="og:image"
@@ -65,7 +66,7 @@
 
     <div class="container">
       <img
-        src="/Blog Image/best divorce lawyer in pune-min.jpg"
+        src="/Blog Image/Pawar/Blog Image/Contested vs. Uncontested Divorce.jpg"
         alt="Feature Image"
         class="feature-image"
       />
