--- a/Pawar/blogs/contested-vs-uncontested-divorce.html
+++ b/Pawar/blogs/contested-vs-uncontested-divorce.html
@@ -66,7 +66,7 @@
 
     <div class="container">
       <img
-        src="/Blog Image/Pawar/Blog Image/Contested vs. Uncontested Divorce.jpg"
+        src="/Blog Image/Pawar/Contested vs. Uncontested Divorce.jpg"
         alt="Feature Image"
         class="feature-image"
       />
