--- a/Pawar/blogs/contested-vs-uncontested-divorce.html
+++ b/Pawar/blogs/contested-vs-uncontested-divorce.html
@@ -20,9 +20,9 @@
     />
     <meta
       property="og:image"
-      content="https://images.unsplash.com/photo-1522202176988-66273c2fd55f"
+      content="https://www.advparmeshwardpawar.com/Blog%20Image/Contested%20vs.%20Uncontested%20Divorce.jpg"
     />
-    <meta property="og:url" content="https://www.advparmeshwardpawar.com/Best-Divorce-Lawyer-in-Pune.html" />
+    <meta property="og:url" content="https://www.advparmeshwardpawar.com/blogs/contested-vs-uncontested-divorce.html" />
     <meta property="og:type" content="article" />
     <meta name="twitter:card" content="summary_large_image" />
     <link
@@ -72,7 +72,7 @@
       />
       <h2><a href="http://" target="_blank" rel="noopener noreferrer"></a></h2>
       <div class="meta">
-        Updated: Aug 11, 2025 · By <strong>Adv. Parmeshwar D. Pawar</strong>
+        Updated: Oct 20, 2025 · By <strong>Adv. Parmeshwar D. Pawar</strong>
       </div>
   
 
