--- a/Pawar/blogs/contested-vs-uncontested-divorce.html
+++ b/Pawar/blogs/contested-vs-uncontested-divorce.html
@@ -172,7 +172,34 @@
     
       <a href="#contact" class="cta">Speak With an Experienced Divorce Lawyer Today</a>
     
+ <section class="faq-section">
+    <h2>Frequently Asked Questions (FAQs)</h2>
+
+      <div class="faq-item">
+      <button class="faq-question">Q1.Is an uncontested divorce cheaper than a contested divorce?</button>
+      <div class="faq-answer">
+        <p> Yes. An uncontested divorce is usually much cheaper because it involves fewer court appearances, less paperwork, and minimal legal fees. A contested divorce often requires lengthy court battles and attorney representation, which significantly increases the cost.</p>
+      </div>
+    </div>
+    <div class="faq-item">
+      <button class="faq-question">Q2. Can I change from an uncontested to a contested divorce?</button>
+      <div class="faq-answer">
+        <p>Yes, if disagreements arise after filing, an uncontested divorce can become contested. For instance, if one spouse withdraws consent or disputes terms like custody or maintenance, the case will proceed as a contested divorce.</p>
+      </div>
+    </div>
+  
+    <div class="faq-item">
+      <button class="faq-question">Q3.Which divorce type gives better control over the outcome?</button>
+      <div class="faq-answer">
+        <p>In an uncontested divorce, both parties have greater control since they mutually decide on all terms. In a contested divorce, the final decision rests with the court, which may not always favor both sides equally.</p> 
+    </div>
+  
+
+
+
+  
  
+  </section>
    
   
   
