--- a/Pawar/blogs/who-is-the-best-divorce-lawyer-near-pune.html
+++ b/Pawar/blogs/who-is-the-best-divorce-lawyer-near-pune.html
@@ -40,10 +40,10 @@
     <span></span>
   </div>
   <ul id="menu">
-    <li><a href="#">Home</a></li>
+    <li><a href="/">Home</a></li>
     <li><a href="#">About</a></li>
     <li><a href="#">Services</a></li>
-    <li><a href="#">Cases</a></li>
+ <li><a href="https://www.advparmeshwardpawar.com/blogs-page.html" class="nav-link">Blogs</a></li>
     <li><a href="#">Contact</a></li>
   </ul>
 </nav>
