--- a/Pawar/blogs/who-is-the-best-divorce-lawyer-near-pune.html
+++ b/Pawar/blogs/who-is-the-best-divorce-lawyer-near-pune.html
@@ -44,7 +44,7 @@
     <li><a href="#">About</a></li>
     <li><a href="#">Services</a></li>
  <li><a href="https://www.advparmeshwardpawar.com/blogs-page.html" class="nav-link">Blogs</a></li>
-    <li><a href="#">Contact</a></li>
+    <li><a href="https://www.advparmeshwardpawar.com/appointment-booking.html">Contact</a></li>
   </ul>
 </nav>
 
