--- a/Pawar/blogs/divorceandchildcustody.html
+++ b/Pawar/blogs/divorceandchildcustody.html
@@ -14,7 +14,7 @@
     <meta property="og:description" content="Protect your rights in divorce and child custody cases in Pune. Get expert legal guidance on child custody, alimony, property division, and family law matters. Consult trusted divorce lawyers in Pune today." />
     <meta property="og:type" content="article" />
     <meta property="og:url" content="https://www.advparmeshwardpawar.com/blogs/divorceandchildcustody.html" />
-    <meta property="og:image" content="https://www.advparmeshwardpawar.com/blogs/divorceandchildcustody.html" />
+    <meta property="og:image" content="https://www.advparmeshwardpawar.com/Blog%20Image/Divorce%20&%20Child%20Custody.jpg" />
   
     <!-- Twitter Card (X) -->
     <meta name="twitter:card" content="summary_large_image" />
