--- a/Pawar/blogs/who-is-the-best-divorce-lawyer-near-pune.html
+++ b/Pawar/blogs/who-is-the-best-divorce-lawyer-near-pune.html
@@ -16,9 +16,9 @@
     />
     <meta
       property="og:image"
-      content=""
+      content="https://www.advparmeshwardpawar.com/Blog%20Image/who-is-the-best-divorce-lawyer-near-pune.png"
     />
-    <meta property="og:url" content=" " />
+    <meta property="og:url" content=" https://www.advparmeshwardpawar.com/Blog%20Image/who-is-the-best-divorce-lawyer-near-pune.png" />
     <meta property="og:type" content="article" />
     <meta name="twitter:card" content="summary_large_image" />
     <link
