--- a/Pawar/blogs-page.html
+++ b/Pawar/blogs-page.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blog Page-Adv. Parmeshwar D. Pawar</title>
+  <title>Adv. Parmeshwar D. Pawar -Blogs </title>
   <link rel="stylesheet" href="style.css">
   <style>
     :root {
