--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -23,7 +23,7 @@
   "image": "https://www.advparmeshwardpawar.com/images/Adv%20Parmeshwar%20D.%20Pawar.jpg",
   "@id": "https://www.advparmeshwardpawar.com/",
   "url": "https://www.advparmeshwardpawar.com/",
-  "description": "Best Divorce Lawyer in Pune - Adv Parmeshwar D. Pawar. Experienced family law attorney offering divorce, child custody, alimony, legal separation & mediation. Call for a consultation.",
+  "description": "Best Divorce Lawyer in Pune - Adv. Parmeshwar D. Pawar. Experienced family law attorney offering divorce, child custody, alimony, legal separation & mediation. Call for a consultation.",
   "foundingDate": "2010",
   "telephone": "+919421861640",
   "email": "parmeshwarp16@gmail.com",
