--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Best Divorce Lawyer in Pune - Adv. Parmeshwar D. Pawar </title>
  <meta name="description" content="Best Divorce Lawyer in Pune - Adv Parmeshwar D. Pawar. Experienced family law attorney offering divorce, child custody, alimony, legal separation & mediation. Call for a consultation.">
-<meta name="keywords" content="Divorce lawyer Pune, best divorce lawyer in Pune, family lawyer Pune, matrimonial lawyer Pune, child custody lawyer Pune, alimony lawyer Pune, Advocate Parmeshwar D. Pawar, divorce attorney Pune">
+<meta name="keywords" content="Best Divorce lawyer in Pune, best divorce lawyer, family lawyer Pune, matrimonial lawyer Pune, child custody lawyer Pune, alimony lawyer Pune, Advocate Parmeshwar D. Pawar, divorce attorney Pune">
 
       <link rel="canonical" href="https://www.advparmeshwardpawar.com/">
 
