--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -90,7 +90,7 @@
                 <li><a href="#about" class="nav-link">About</a></li>
                 <li><a href="#services" class="nav-link">Services</a></li>
                 <li><a href="https://www.advparmeshwardpawar.com/blogs-page.html" class="nav-link">Blogs</a></li>
-                <li><a href="#contact" class="nav-link">Contact me</a></li>
+                <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
             <button class="menu-toggle" id="menu-toggle">☰</button>
         </div>
