--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -112,7 +112,7 @@
             </p>
             <div class="cta-buttons">
                 <a href="https://www.advparmeshwardpawar.com/appointment-booking.html" class="btn btn-primary">Online Consultation</a>
-                <a href="#about" class="btn btn-secondary">Learn More</a>
+                <a href="https://www.advparmeshwardpawar.com/appointment-booking.html" class="btn btn-secondary">Book Consultation</a>
             </div>
         </div>
 
