--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -160,7 +160,7 @@
     <!-- Services Section -->
        <div class="service-one">
         <div class="services-header">
-            <h2 class="services-title">Legal Services</h2>
+            <h2 class="services-title">Divorce Law Services in Pune</h2>
             <p class="services-subtitle">Advocate Parmeshwar D. Pawar is an expert in family law, offering professional guidance and support for all aspects of divorce proceedings. Recognized as one of the Best Divorce Lawyers in Pune, he provides clients with clear advice and explains the certainty or possibility of success at the initial stage of the case.
 </p>
         </div>
