--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -108,7 +108,7 @@
             <h1 class="hero-title">Best Divorce Lawyer</h1>
             <p class="hero-subtitle">Protecting Your Rights Since 2011</p>
             <p class="hero-description">
-             Adv. Prem is an experienced divorce lawyer with over 15 years of practice in matrimonial law. He handles cases related to contested divorce, mutual consent divorce, domestic violence, child custody, and maintenance, providing clear legal guidance and reliable representation to his clients.
+         Adv. Parmeshwar D. Pawar is an experienced divorce lawyer with over 15 years of practice in matrimonial law. He handles cases related to contested divorce, mutual consent divorce, domestic violence, child custody, and maintenance, providing clear legal guidance and reliable representation to his clients.
             </p>
             <div class="cta-buttons">
                 <a href="https://www.advparmeshwardpawar.com/appointment-booking.html" class="btn btn-primary">Online Consultation</a>
