--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -226,6 +226,61 @@
       </section>
       </div>
 
+ <!-- new section -->
+ <section class="premium-pricing">
+    <div class="container">
+      <h2>Choose Your Online Consultation</h2>
+      <p class="pricing-subtitle">
+        Confidential Legal Advice • Secure Online Meeting • Expert Guidance
+      </p>
+  
+      <div class="pricing-grid">
+  
+        <!-- 15 MIN CARD -->
+        <div class="pricing-card">
+          <h3>15 Minutes Consultation</h3>
+          <div class="price">₹499</div>
+          <ul>
+            <li>✔ Quick Legal Clarification</li>
+            <li>✔ Basic Case Understanding</li>
+            <li>✔ Immediate Guidance</li>
+            <li>✔ Phone Consultation</li>
+          </ul>
+          <a href="#consultation" class="btn-gold full-btn">Book 15 Min</a>
+        </div>
+  
+        <!-- 30 MIN CARD (Highlighted) -->
+        <div class="pricing-card featured">
+          <div class="badge">Most Popular</div>
+          <h3>30 Minutes Consultation</h3>
+          <div class="price">₹1000</div>
+          <ul>
+            <li>✔ Detailed Case Discussion</li>
+            <li>✔ Legal Strategy Advice</li>
+            <li>✔ Documentation Guidance</li>
+            <li>✔ Phone / Video Call</li>
+          </ul>
+          <a href="#consultation" class="btn-gold full-btn">Book 30 Min</a>
+        </div>
+  
+        <!-- 60 MIN CARD -->
+        <div class="pricing-card">
+          <h3>1 Hour Consultation</h3>
+          <div class="price">₹1500</div>
+          <ul>
+            <li>✔ Complete Case Evaluation</li>
+            <li>✔ Step-by-Step Legal Plan</li>
+            <li>✔ Risk & Outcome Analysis</li>
+            <li>✔ Video Consultation</li>
+          </ul>
+          <a href="#consultation" class="btn-gold full-btn">Book 1 Hour</a>
+        </div>
+  
+      </div>
+    </div>
+  </section>
+ <!-- new section end -->
+
     <!-- my office -->
 
    <div class="container">
