--- a/Pawar/appointment-booking.html
+++ b/Pawar/appointment-booking.html
@@ -1,237 +1,238 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Booking Form</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      font-family: "Poppins", sans-serif;
-    }
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Book Appointment</title>
 
-    body {
-      margin: 0;
-      padding: 0;
-      background: #0b0b0b;
-      color: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
-    }
+<style>
+* {
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
 
-    .form-container {
-      background: #111;
-      width: 90%;
-      max-width: 450px;
-      padding: 30px;
-      border-radius: 12px;
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.1);
-    }
+body {
+  margin: 0;
+  background: #0b0b0b;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
 
-    .form-container h2 {
-      text-align: center;
-      margin-bottom: 25px;
-      color: #ffd700;
-      letter-spacing: 1px;
-    }
+.form-container {
+  background: #111;
+  width: 90%;
+  max-width: 450px;
+  padding: 30px;
+  border-radius: 12px;
+  box-shadow: 0 0 20px rgba(255,255,255,0.1);
+}
 
-    .form-group {
-      margin-bottom: 20px;
-    }
+h2 {
+  text-align: center;
+  color: #ffd700;
+  margin-bottom: 25px;
+}
 
-    .form-group label {
-      display: block;
-      margin-bottom: 6px;
-      font-weight: 500;
-    }
+.form-group {
+  margin-bottom: 18px;
+}
 
-    .form-group input,
-    .form-group textarea,
-    .form-group select {
-      width: 100%;
-      padding: 12px 14px;
-      border: 1px solid #444;
-      border-radius: 8px;
-      background: #1c1c1c;
-      color: #fff;
-      font-size: 15px;
-      outline: none;
-      transition: 0.3s ease;
-    }
+label {
+  display: block;
+  margin-bottom: 6px;
+}
 
-    .form-group input:focus,
-    .form-group textarea:focus,
-    .form-group select:focus {
-      border-color: #ffd700;
-      box-shadow: 0 0 5px #ffd70080;
-    }
+input, select, textarea {
+  width: 100%;
+  padding: 12px;
+  border-radius: 8px;
+  border: 1px solid #444;
+  background: #1c1c1c;
+  color: #fff;
+  outline: none;
+}
 
-    textarea {
-      resize: none;
-      height: 100px;
-    }
+input:focus, select:focus, textarea:focus {
+  border-color: #ffd700;
+  box-shadow: 0 0 5px #ffd70080;
+}
 
-    .btn-group {
-      display: flex;
-      gap: 10px;
-    }
+textarea {
+  resize: none;
+  height: 90px;
+}
 
-    .submit-btn {
-      flex: 1;
-      padding: 12px;
-      background: linear-gradient(45deg, #ffd700, #ffa500);
-      border: none;
-      border-radius: 8px;
-      color: #000;
-      font-size: 16px;
-      font-weight: 600;
-      cursor: pointer;
-      transition: 0.3s ease;
-      text-align: center;
-    }
+.submit-btn {
+  width: 100%;
+  padding: 12px;
+  border: none;
+  border-radius: 8px;
+  background: linear-gradient(45deg,#ffd700,#ffa500);
+  color: #000;
+  font-weight: 600;
+  cursor: pointer;
+  margin-top: 10px;
+}
 
-    .submit-btn:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 4px 10px rgba(255, 215, 0, 0.3);
-    }
+.submit-btn:hover {
+  transform: translateY(-2px);
+}
 
-    .info {
-      margin-top: 10px;
-      font-size: 14px;
-      color: #ffd700;
-      text-align: center;
-    }
-
-    @media (max-width: 480px) {
-      .form-container {
-        padding: 20px;
-      }
-
-      .form-container h2 {
-        font-size: 20px;
-      }
-
-      .btn-group {
-        flex-direction: column;
-      }
-    }
-  </style>
+.info {
+  text-align: center;
+  color: #ffd700;
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+/* Fix calendar icon color */
+input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(1);
+  cursor: pointer;
+}
+@media(max-width:480px){
+  .form-container{
+    padding:20px;
+  }
+}
+</style>
 </head>
 <body>
 
-  <div class="form-container">
-    <h2>Book Your Appointment</h2>
-    <form action="https://formspree.io/f/xblzkqkq" method="POST">
-      <div class="form-group">
-        <label for="name">Full Name</label>
-        <input type="text" id="name" name="name" placeholder="Enter your name" required />
-      </div>
+<div class="form-container">
+  <h2>Book Your Appointment</h2>
 
-      <div class="form-group">
-        <label for="phone">Phone Number</label>
-        <input type="tel" id="phone" name="phone" placeholder="Enter your phone number" required />
-      </div>
+  <form id="bookingForm" action="https://formspree.io/f/xblzkqkq" method="POST">
 
-      <div class="form-group">
-        <label for="place">Place</label>
-        <input type="text" id="place" name="place" placeholder="Enter your place" />
-      </div>
+    <div class="form-group">
+      <label>Full Name</label>
+      <input type="text" name="name" required>
+    </div>
 
-      <div class="form-group">
-        <label for="date">Date</label>
-        <input type="date" id="date" name="date" required />
-      </div>
+    <div class="form-group">
+      <label>Phone Number</label>
+      <input type="tel" name="phone" required>
+    </div>
 
-      <div class="form-group">
-        <label for="time">Select Time</label>
-        <select id="time" name="time" required disabled>
-          <option value="">Select a time</option>
-        </select>
-      </div>
+    <div class="form-group">
+      <label>Place</label>
+      <input type="text" name="place">
+    </div>
 
-      <div class="info" id="info"></div>
+    <!-- NEW CONSULTATION DURATION -->
+    <div class="form-group">
+      <label>Select Consultation Duration</label>
+      <select name="consultation_duration" required>
+        <option value="">Select Duration</option>
+        <option value="15 Minutes">15 Minutes</option>
+        <option value="30 Minutes">30 Minutes</option>
+        <option value="1 Hour">1 Hour</option>
+      </select>
+    </div>
 
-      <div class="form-group">
-        <label for="message">Message</label>
-        <textarea id="message" name="message" placeholder="Enter your message..."></textarea>
-      </div>
+    <div class="form-group">
+      <label>Date</label>
+      <input type="date" id="date" name="date" required>
+    </div>
 
-      <div class="btn-group">
-        <button type="submit" class="submit-btn">Submit Booking</button>
-        <button type="button" class="submit-btn" onclick="window.location.href='https://www.advparmeshwardpawar.com/'">Back</button>
-      </div>
-    </form>
-  </div>
+    <div class="form-group">
+      <label>Select Time</label>
+      <select id="time" name="time" required disabled>
+        <option value="">Select time</option>
+      </select>
+    </div>
 
-  <script>
-    const dateInput = document.getElementById("date");
-    const timeSelect = document.getElementById("time");
-    const info = document.getElementById("info");
+    <div class="info" id="info"></div>
 
-    // Force open date picker on focus or click
-    dateInput.addEventListener("focus", () => dateInput.showPicker && dateInput.showPicker());
-    dateInput.addEventListener("click", () => dateInput.showPicker && dateInput.showPicker());
+    <div class="form-group">
+      <label>Message</label>
+      <textarea name="message"></textarea>
+    </div>
 
-    // Set date picker to allow only dates after 24 hours
-    const today = new Date();
-    const tomorrow = new Date(today);
-    tomorrow.setDate(today.getDate() + 1);
-    dateInput.min = tomorrow.toISOString().split("T")[0];
+    <button type="submit" class="submit-btn">Submit Booking</button>
 
-    function populateTimes(times) {
-      timeSelect.innerHTML = '<option value="">Select a time</option>';
-      times.forEach(time => {
-        const option = document.createElement("option");
-        option.value = time;
-        option.textContent = time;
-        timeSelect.appendChild(option);
-      });
-      timeSelect.disabled = times.length === 0;
-    }
+  </form>
+</div>
 
-    dateInput.addEventListener("change", () => {
-      const selectedDate = new Date(dateInput.value);
-      const day = selectedDate.getDay(); // 0=Sunday, 6=Saturday
-      const date = selectedDate.getDate();
-      const month = selectedDate.getMonth();
-      let message = "";
-      let times = [];
+<script>
+const form = document.getElementById("bookingForm");
+const dateInput = document.getElementById("date");
+const timeSelect = document.getElementById("time");
+const info = document.getElementById("info");
 
-      // Get 2nd and 4th Saturday
-      const saturdayDates = [];
-      for (let i = 1; i <= 31; i++) {
-        const temp = new Date(selectedDate.getFullYear(), month, i);
-        if (temp.getDay() === 6) saturdayDates.push(i);
-      }
+// Minimum tomorrow date
+const today = new Date();
+today.setDate(today.getDate() + 1);
+dateInput.min = today.toISOString().split("T")[0];
 
-      if (day === 0) {
-        message = "Sunday: On-call appointments only.";
-        times = [];
-      } else if (day >= 1 && day <= 5) {
-        message = "Available: 9:00–11:00 AM and 5:00–8:00 PM";
-        times = [
-          "09:00 AM", "09:30 AM", "10:00 AM", "10:30 AM", "11:00 AM",
-          "05:00 PM", "05:30 PM", "06:00 PM", "06:30 PM", "07:00 PM", "07:30 PM", "08:00 PM"
-        ];
-      } else if (day === 6 && (date === saturdayDates[1] || date === saturdayDates[3])) {
-        message = "2nd & 4th Saturday: Available 9:00 AM – 8:00 PM";
-        times = [
-          "09:00 AM", "09:30 AM", "10:00 AM", "10:30 AM", "11:00 AM", "11:30 AM",
-          "12:00 PM", "12:30 PM", "01:00 PM", "01:30 PM", "02:00 PM", "02:30 PM",
-          "03:00 PM", "03:30 PM", "04:00 PM", "04:30 PM", "05:00 PM", "05:30 PM",
-          "06:00 PM", "06:30 PM", "07:00 PM", "07:30 PM", "08:00 PM"
-        ];
-      } else {
-        message = "Closed on this day.";
-        times = [];
-      }
+function populateTimes(times){
+  timeSelect.innerHTML = '<option value="">Select time</option>';
+  times.forEach(time=>{
+    const option = document.createElement("option");
+    option.value = time;
+    option.textContent = time;
+    timeSelect.appendChild(option);
+  });
+  timeSelect.disabled = times.length === 0;
+}
 
-      info.textContent = message;
-      populateTimes(times);
-    });
-  </script>
+dateInput.addEventListener("change", ()=>{
+  const selectedDate = new Date(dateInput.value);
+  const day = selectedDate.getDay();
+  const date = selectedDate.getDate();
+  const month = selectedDate.getMonth();
+  let message = "";
+  let times = [];
+
+  const saturdayDates = [];
+  for(let i=1;i<=31;i++){
+    const temp = new Date(selectedDate.getFullYear(), month, i);
+    if(temp.getDay() === 6) saturdayDates.push(i);
+  }
+
+  if(day === 0){
+    message = "Sunday: On-call appointments only.";
+  }
+  else if(day >= 1 && day <= 5){
+    message = "Available: 9AM–11AM & 5PM–8PM";
+    times = ["09:00 AM","09:30 AM","10:00 AM","10:30 AM","11:00 AM",
+             "05:00 PM","05:30 PM","06:00 PM","06:30 PM","07:00 PM","07:30 PM","08:00 PM"];
+  }
+  else if(day === 6 && (date === saturdayDates[1] || date === saturdayDates[3])){
+    message = "2nd & 4th Saturday: 9AM–8PM";
+    times = ["09:00 AM","09:30 AM","10:00 AM","10:30 AM","11:00 AM",
+             "12:00 PM","01:00 PM","02:00 PM","03:00 PM","04:00 PM",
+             "05:00 PM","06:00 PM","07:00 PM","08:00 PM"];
+  }
+  else{
+    message = "Closed on this day.";
+  }
+
+  info.textContent = message;
+  populateTimes(times);
+});
+
+// Submit & Redirect
+form.addEventListener("submit", async function(e){
+  e.preventDefault();
+
+  const data = new FormData(form);
+
+  const response = await fetch(form.action,{
+    method: "POST",
+    body: data,
+    headers: { 'Accept': 'application/json' }
+  });
+
+  if(response.ok){
+    window.location.href = "qr.html";
+  }else{
+    alert("Something went wrong. Please try again.");
+  }
+});
+</script>
 
 </body>
 </html>
