--- a/Pawar/qr.html
+++ b/Pawar/qr.html
@@ -53,7 +53,7 @@ button{
   <h2>Scan & Complete Payment</h2>
   <p>Please scan the QR code below to confirm your appointment.</p>
 
-  <img src="https://upload.wikimedia.org/wikipedia/commons/d/d0/QR_code_for_mobile_English_Wikipedia.svg" alt="QR Code">
+  <img src="images/qr.jpeg" alt="QR Code">
 
   <br>
   <button onclick="window.location.href='https://www.advparmeshwardpawar.com/'">
