--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -246,7 +246,7 @@
             <li>✔ Immediate Guidance</li>
             <li>✔ Phone Consultation</li>
           </ul>
-          <a href="#consultation" class="btn-gold full-btn">Book 15 Min</a>
+          <a href="https://www.advparmeshwardpawar.com/appointment-booking.html" class="btn-gold full-btn">Book 15 Min</a>
         </div>
   
         <!-- 30 MIN CARD (Highlighted) -->
@@ -260,7 +260,7 @@
             <li>✔ Documentation Guidance</li>
             <li>✔ Phone / Video Call</li>
           </ul>
-          <a href="#consultation" class="btn-gold full-btn">Book 30 Min</a>
+          <a href="https://www.advparmeshwardpawar.com/appointment-booking.html" class="btn-gold full-btn">Book 30 Min</a>
         </div>
   
         <!-- 60 MIN CARD -->
@@ -273,7 +273,7 @@
             <li>✔ Risk & Outcome Analysis</li>
             <li>✔ Video Consultation</li>
           </ul>
-          <a href="#consultation" class="btn-gold full-btn">Book 1 Hour</a>
+          <a href="https://www.advparmeshwardpawar.com/appointment-booking.html" class="btn-gold full-btn">Book 1 Hour</a>
         </div>
   
       </div>
