--- a/Pawar/qr.html
+++ b/Pawar/qr.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Complete Payment</title>
+<title>Complete Your Payment</title>
 
 <style>
 body{
