--- a/Pawar/index.html
+++ b/Pawar/index.html
@@ -780,7 +780,7 @@
     </div>
 
     <div class="footer-bottom">
-      © 2025 Adv Parmeshwar D. Pawar. All rights reserved
+      © 2025-2026 Adv. Parmeshwar D. Pawar. All rights reserved
     </div>
   </footer>
 
